--- a/sisters0site/sisters-cv/src/ui/Summary/summary.sass
+++ b/sisters0site/sisters-cv/src/ui/Summary/summary.sass
@@ -16,6 +16,9 @@ a
   &:hover
     text-decoration: underline
 
+.pdf-title
+  margin-bottom: 15px
+
 .open-link
   &:hover
     text-decoration: underline
@@ -54,7 +57,7 @@ a
     text-align: justify
 
   @media (max-width: 502px)
-    width: 32vh
+    width: 90%
 
 // Block 2
 .block-2
@@ -87,6 +90,10 @@ a
     margin-top: 10px
 
 // Block 3
+.body-container
+  @media (max-width: 502px)
+    gap: 0
+
 .block-3
   font-family: "Century Gothic"
   margin-top: 50px
@@ -109,7 +116,7 @@ a
     text-align: center
     margin-top: 10px
     padding-top: 10px
-    margin-bottom: 30px
+    // margin-bottom: 30px
 
   @media screen and (min-width: $small) and (max-width: $medium)
     text-align: center
