--- a/sisters0site/sisters-cv/src/ui/Footer/footer.sass
+++ b/sisters0site/sisters-cv/src/ui/Footer/footer.sass
@@ -1,1 +1,17 @@
+.footer-container
+    height: 100px
+    margin-top: 70px
+    color: white
+    background-image: url(../../image/header-bg.png)
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
 
+.footer-title
+    @media (max-width: 375px)
+        font-size: 17px
+
+.footer-developer-name a
+    color: white
+    
