update summary.sass and portfolio.sass

--- a/sisters0site/sisters-cv/src/ui/Portfolio/portfolio.sass
+++ b/sisters0site/sisters-cv/src/ui/Portfolio/portfolio.sass
@@ -5,6 +5,8 @@
   justify-content: space-around
   width: calc(2*350px + 20px)
   gap: 40px
+  @media (min-width: 320px) and (max-width: 959px)
+    gap: 10px
 
 .project-card
   cursor: pointer
