--- a/sisters0site/sisters-cv/src/ui/Summary/summary.sass
+++ b/sisters0site/sisters-cv/src/ui/Summary/summary.sass
@@ -17,7 +17,7 @@ a
     text-decoration: underline
 
 .pdf-title
-  margin-bottom: 15px
+  margin: 20px 0 15px 0
 
 .open-link
   &:hover
@@ -47,7 +47,7 @@ a
   margin-top: 30px
 
   p
-    margin-bottom: 30px
+    margin-bottom: 20px
 
     &:last-child
       margin-bottom: 0
@@ -101,7 +101,7 @@ a
   flex-direction: column
 
   a
-    margin-bottom: 20px
+    margin-bottom: 7px
 
     &:hover
       text-decoration: underline
@@ -133,7 +133,7 @@ a
 .summary-container
   width: 397px
   position: sticky
-  top: 0
+  top: 15px
   z-index: 100
   align-self: flex-start
 
